# 
# Copyright 2014 Internet Corporation for Assigned Names and Numbers.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

Hedgehog 2.0.0b2
-----------------------------

* Support for Vagrant Provisioning (thanks melalj)
* Various installation changes to support packaging (thanks arhbkb)
* Changed the yaml parsing to use the Perl YAML::Tiny library
* Changed the default_interactive_plot_type to svg (instead of flash)

Hedgehog 2.0.0b1 - 2014-09-09
-----------------------------

* Database schema changes: Plot table split into 3 and replaced by a view.
  Added explicit handling of plots based on 2 datasets.
  ****** Database version bumped - not backwards compatible *****
* Added new config option 'default_interactive_plot_type' to 
  hedgehog_gui.yaml. This can be used to generate SVG interactive plots
  instead of the default interactive plots which require Flash.
* Issue-#1: hedgehog_gui.yaml configuration file is now installed in
  <prefix>/etc/hedgeghog
* Database version mismatch now reported correctly in the GUI


Hedgehog 2.0.0a1 - 2014-08-27
----------------------------

* Initial open source alpha release including:
  * Data importer (refile_and_grok.sh)
    - DAT-> Postgres database importer
    - XML-> Postgres database importer
    - XML-> DAT converter
  * Database schema and scripts
  * Web GUI
  * Support for multiple servers
  * Support for import of RSSAC data (from XML only)