@@ -58,6 +58,9 @@ DARKVIOLET <- "#8B2DB2"
 
 NCBPALETTE <- length(CBPALETTE)
 
+MINICBPALETTE <- c(DARKERRED, DARKERLIMEGREEN)
+NMINICBPALETTE <- length(MINICBPALETTE)
+
 # width and height of ggplot pngs
 W <- 940
 H <- 600
@@ -359,6 +362,48 @@ facetedBarPlot <- function(df, f, title, xlabel, ylabel, gvis, bar_width) {
     }
 }
 
+facetedLinePlot <- function(df, f, title, xlabel, ylabel, gvis) {
+
+	if (hh_debug) {
+		system('logger -p user.notice In facetedLinePlot')
+	}
+
+    if(gvis == 1){
+        linePlot(df, f, title, xlabel, ylabel, gvis)
+    }else{
+        nKeys <- length(unique(df$key))
+        png(f, type="cairo-png", width = W, height = H)
+        df$x <- as.POSIXct(df$x)
+        rkey1 <- sub("dns-(.*)-.*-.*-(.*)", "\\1-\\2", df$key)
+        df["rkey"] <- rkey1
+        rkey2 <- sub("dns-.*-(.*)-.*-.*", "\\1", df$key)
+        df["key"] <- rkey2
+
+        p <- ggplot(data=df, aes(x=x, y=y, group=key, colour=key)) +
+                    geom_jitter(position=position_jitter(width=2)) +
+                    geom_line() +
+                    labs(title=title, x=xlabel, y=ylabel) +
+                    facet_grid(rkey ~ ., scales="free") +
+                    scale_x_datetime(expand=c(0.01,0)) +
+                    scale_y_continuous(expand=c(0.01,0), labels=comma) +
+                    theme_bw() +
+                    theme(panel.grid.major = element_line(colour = GRIDGREY), panel.grid.minor = element_line(colour = GRIDGREY, linetype = "dotted")) +
+                    guides(col = guide_legend(nrow = 20, byrow = TRUE, override.aes=list(size=3)))
+
+        nKeys = length(unique(df$key))
+        if (nKeys <= NMINICBPALETTE) {
+            p <- p + scale_colour_manual(values=MINICBPALETTE)
+        }
+        else if (nKeys <= NCBPALETTE) {
+          p <- p + scale_colour_manual(values=CBPALETTE)
+        }
+
+        print(p)
+        dev.off()
+    }
+}
+
+
 getStmntParameters <- function(dsccon, dbdrv, dd_pltid, prepStmtNm, srvrid, start, stop) {
 
 	# Retrieving the datasets ids for the plot
@@ -573,10 +618,11 @@ initPlotOptions <- function() {
     
 	passplotname            <<- c(f1lookupcodes, f1lookupcodesnoquery)
 	avgoverwindow           <<- c(format3, 'qtype_vs_tld', 'client_addr_vs_rcode_accum', 'client_subnet2_accum', 'dns_ip_version_vs_qtype')
-	lineplots               <<- c(format1, format2, "by_node", "traffic_volume", "rcode_volume")
+	lineplots               <<- c(format1, format2, "by_node", "rcode_volume")
 	facetedbarplots         <<- c("traffic_sizes_small","traffic_sizes_big")
+	facetedlineplots        <<- c("traffic_volume")
 
-	log_option              <<- c(f1, f1lookupcodes, f1lookupcodesnoquery, f1noclr, f1nonormal, format2, "by_node", "traffic_volume", "rcode_volume")
+	log_option              <<- c(f1, f1lookupcodes, f1lookupcodesnoquery, f1noclr, f1nonormal, format2, "by_node", "rcode_volume")
 }
 
 # create plot file if not cached
@@ -602,7 +648,7 @@ generatePlotFile <- function(plttitle, pltnm, ddpltid, plot_file, simple_start, 
 
 	ylab <- "Queries/sec"
 	if (pltnm %in% rssac) {
-		ylab <- "Number of Queries"
+		ylab <- "Queries/min"
 	}
 
 	if (pltnm == 'traffic_sizes_small' || pltnm == 'traffic_sizes_big') {
@@ -687,6 +733,9 @@ generatePlotFile <- function(plttitle, pltnm, ddpltid, plot_file, simple_start, 
 	}
 	else if (pltnm %in% lineplots) {
 		linePlot(df, plot_file, mytitle, xlab, ylab, gvis)
+	}
+    else if (pltnm %in% facetedlineplots) {
+		facetedLinePlot(df, plot_file, mytitle, xlab, ylab, gvis)
 	}
 	else if (pltnm %in% facetedbarplots) {
 		# currently hard coded to bar width of 14 to make 16 width buckets easy to see
